# CareerCopilot

./: .gitignore  LICENSE  README.md
backend/: agent.py  company_search.py  documents.py  main.py  pyproject.toml  requirements.txt  resume_rag.py  schema.py  server.py  settings.py  utils.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/lib/: app-utils.ts
