[project]
name = "agent-jobapply"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.3",
    "pydantic[email]>=2.11.7",
    "pypdf>=6.4.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
